--- a/windows/react_native_windows_file_picker/react_native_windows_file_picker.vcxproj
+++ b/windows/react_native_windows_file_picker/react_native_windows_file_picker.vcxproj
@@ -5,9 +5,9 @@
     <CppWinRTOptimized>true</CppWinRTOptimized>
     <CppWinRTRootNamespaceAutoMerge>true</CppWinRTRootNamespaceAutoMerge>
     <MinimalCoreWin>true</MinimalCoreWin>
-    <ProjectGuid>{abff2b53-ef80-40d4-b638-a6a63ed5a9e3}</ProjectGuid>
-    <ProjectName>react-native-windows-file-picker-example</ProjectName>
-    <RootNamespace>react-native-windows-file-picker-example</RootNamespace>
+    <ProjectGuid>{ee2c01df-aa52-45c6-85d3-87a0e1569172}</ProjectGuid>
+    <ProjectName>react_native_windows_file_picker</ProjectName>
+    <RootNamespace>react_native_windows_file_picker</RootNamespace>
     <DefaultLanguage>en-US</DefaultLanguage>
     <MinimumVisualStudioVersion>16.0</MinimumVisualStudioVersion>
     <AppContainerApplication>true</AppContainerApplication>
@@ -15,8 +15,8 @@
     <ApplicationTypeRevision>10.0</ApplicationTypeRevision>
     <WindowsTargetPlatformVersion Condition=" '$(WindowsTargetPlatformVersion)' == '' ">10.0.18362.0</WindowsTargetPlatformVersion>
     <WindowsTargetPlatformMinVersion>10.0.16299.0</WindowsTargetPlatformMinVersion>
-    <PackageCertificateKeyFile>react-native-windows-file-picker-example_TemporaryKey.pfx</PackageCertificateKeyFile>
-    <PackageCertificateThumbprint>AADAD2450868A2C368C66FB8822D3A3258A8ADB5</PackageCertificateThumbprint>
+    <PackageCertificateKeyFile>react_native_windows_file_picker_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateThumbprint>BAFE77E3769D0E4543E6A24FF48A51B612F560DA</PackageCertificateThumbprint>
     <PackageCertificatePassword>password</PackageCertificatePassword>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -71,7 +71,8 @@
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
-  <ImportGroup Label="ExtensionSettings"></ImportGroup>
+  <ImportGroup Label="ExtensionSettings">
+  </ImportGroup>
   <ImportGroup Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
@@ -104,6 +105,7 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="FilePicker.h" />
     <ClInclude Include="MainPage.h">
       <DependentUpon>MainPage.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -135,6 +137,7 @@
     <Image Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="FilePicker.cpp" />
     <ClCompile Include="MainPage.cpp">
       <DependentUpon>MainPage.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -157,6 +160,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Midl>
+    <Midl Include="ReactPackageProvider.idl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
